--- a/HW_4_Regression.ipynb
+++ b/HW_4_Regression.ipynb
@@ -37,7 +37,7 @@
       "cell_type": "code",
       "source": [
         "# Load your CSV data\n",
-        "data = pd.read_csv('/content/cars.csv')\n",
+        "data = pd.read_csv('https://raw.githubusercontent.com/msyturk/classification-and-regression/main/cars.csv')\n",
         "\n",
         "# Drop rows with missing values in the label column\n",
         "data = data.dropna(subset=[data.columns[-1]])\n",
