--- a/HW_4_Classification.ipynb
+++ b/HW_4_Classification.ipynb
@@ -34,7 +34,7 @@
       "cell_type": "code",
       "source": [
         "# Load your CSV data\n",
-        "data = pd.read_csv('/content/heart.csv')\n",
+        "data = pd.read_csv('https://raw.githubusercontent.com/msyturk/classification-and-regression/main/heart.csv')\n",
         "\n",
         "# Assuming the last column is the output and the rest are inputs\n",
         "X = data.iloc[:, :-1]\n",
